# rclone-bench

./: README.md  generate_bulk_data.yml  generate_dataset.yml  generate_model_weights.yml  pyproject.toml
bench/: bench_utils.py  dataset_read.py  model_loading.py
scripts/: dataset_prefill.py  model_data_prefill.py
